Proper z-indexing for user menu and fixed sidebar header.

--- a/app/assets/stylesheets/_header.sass
+++ b/app/assets/stylesheets/_header.sass
@@ -22,7 +22,7 @@
   position: fixed
   top: 0
   width: 980px
-  z-index: 2
+  z-index: 2000
 
 #header
   +round
